--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,12 @@
 
   <base href="/">
 
-  <link href="~bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Inconsolata|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
 </head>
 
 <body>
   <app-root>Loading...</app-root>
+
 </body>
 
 </html>
