--- a/src/404.html
+++ b/src/404.html
@@ -2,20 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-  <title>Jenn Le</title>
-
-  <base href="/">
-
-  <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
+  <script>
+    sessionStorage.redirect = location.href;
+  </script>
+  <meta http-equiv="refresh" content="0;URL='/JennLe'"></meta>
 </head>
 
-<body>
-  <app-root>Loading...</app-root>
-
-</body>
 
 </html>
