--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,16 @@
 
   <title>Jenn Le</title>
 
+  <script>
+    (function(){
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect != location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    })();
+  </script>
+
   <base href="/">
 
   <link href="https://fonts.googleapis.com/css?family=Nunito:300" rel="stylesheet">
