--- a/src/404.html
+++ b/src/404.html
@@ -5,7 +5,7 @@
   <script>
     sessionStorage.redirect = location.href;
   </script>
-  <meta http-equiv="refresh" content="0;URL='/JennLe'"></meta>
+  <meta http-equiv="refresh" content="0;URL='/'"></meta>
 </head>
 
 
