--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
   <title>Jenn Le</title>
 
+  <!-- Allows refreshing -->
   <script>
     (function(){
       var redirect = sessionStorage.redirect;
@@ -25,6 +26,7 @@
 
 <body>
   <app-root>Loading...</app-root>
+
 
 </body>
 
