Just some structural stuff

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
   <base href="/">
 
-  <link href="https://fonts.googleapis.com/css?family=Nunito:300|Raleway" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:300|Raleway:300,400,500" rel="stylesheet">
 </head>
 
 <body>
