Changed to black and white, added jupyter notebook rendering

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:300|Montserrat:100,200,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Roboto:300|Montserrat:100,200,400|Nunito+Sans:200,300,400" rel="stylesheet">
 
     <title>Jenn Le</title>
   </head>
